# python-realworld-chat

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  main.py  mypy.ini  pyproject.toml  tasks.py
client/: .gitignore  package.json
client/src/lib/components/: AddUserModal.svelte  Auth.svelte  Header.svelte  IconSidebar.svelte  Sidebar.svelte
client/src/lib/stores/: chat.ts  user.ts
client/src/lib/styles/: settings-form.css
client/src/lib/types/: db.ts
client/src/lib/util/: index.ts
client/src/routes/: __layout.svelte  index.svelte  requests.svelte
client/src/routes/settings/: __layout.reset.svelte  account.svelte  index.svelte  profile.svelte
prisma/: schema.prisma
prisma/migrations/20211113141806_add_user_and_profile_models/: migration.sql
prisma/migrations/20211114043734_user_providerdata_is_json_now/: migration.sql
prisma/migrations/20211114043917_use_camel_case/: migration.sql
prisma/migrations/20211123043203_add_chat_request_model/: migration.sql
prisma/migrations/20211123044400_make_chat_request_fields_unique/: migration.sql
prisma/migrations/20211123052057_add_accepted_field_to_chat_request/: migration.sql
src/: __init__.py
src/lib/: db.py  rd.py  ws.py
src/lib/auth/: __init__.py  github.py  password.py  util.py
src/lib/session/: __init__.py  store.py
src/routes/: __init__.py  auth.py  chat.py  settings.py
